--- a/docker_compose_yacreader.yaml
+++ b/docker_compose_yacreader.yaml
@@ -6,6 +6,7 @@
 #   docker exec yacserver YACReaderLibraryServer list-libraries
 # - Eliminar una librería:
 #   docker exec yacserver YACReaderLibraryServer remove-library <library-name>
+version: 3
 
 services:
   flame:
