--- a/docker_compose_comixed.yaml
+++ b/docker_compose_comixed.yaml
@@ -1,9 +1,9 @@
 version: "3.8"
 
 services:
-  flame:
+  comixed:
     image: comixed/comixed:latest
-    container_name: "comixed"
+#    container_name: "comixed"
     restart: unless-stopped
     ports:
       - 7171:7171
