--- a/docker_compose_comixed.yaml
+++ b/docker_compose_comixed.yaml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   comixed:
     image: comixed/comixed:latest
-#    container_name: "comixed"
+    container_name: "comixed"
     restart: unless-stopped
     ports:
       - 7171:7171
