--- a/docker_compose_pihole_swarm.yaml
+++ b/docker_compose_pihole_swarm.yaml
@@ -18,23 +18,23 @@ services:
     #  - 53:53/udp
     #  - 67:67/udp # Only required if you are using Pi-hole as your DHCP server
     #  - 8080:80/tcp # Interfaz web
-    ports:
-      - target: 53
-        published: 53
-        protocol: tcp
-        mode: host
-      - target: 53
-        published: 53
-        protocol: udp
-        mode: host
-      - target: 67
-        published: 67
-        protocol: udp
-        mode: host      
-      - target: 80
-        published: 831
-        protocol: udp
-        mode: host
+#    ports:
+#      - target: 53
+#        published: 53
+#        protocol: tcp
+#        mode: host
+#      - target: 53
+#        published: 53
+#        protocol: udp
+#        mode: host
+#      - target: 67
+#        published: 67
+#        protocol: udp
+#        mode: host      
+#      - target: 80
+#        published: 831
+#        protocol: udp
+#        mode: host
     network_mode: host
     cap_add:
       - NET_ADMIN # Required if you are using Pi-hole as your DHCP server, else not needed    
