--- a/gestion-docker/portainer-compose.yaml
+++ b/gestion-docker/portainer-compose.yaml
@@ -1,19 +1,18 @@
 # Ejecutar con: docker-compose -f docker-compose-portainer.yml up -d
+#
+# https://192.168.1.254:9443
 
 version: "3.2"
 
 services:
+
   portainer:
     image: portainer/portainer-ee:latest
     container_name: portainer
     hostname: portainer
-#    pull_policy: always
-    restart: always
+    restart: unless-stopped
     ports:
       - 9443:9443
-      - 8000:8000
-    networks:
-      - -network
     volumes:
       - /docker/portainer/config:/data
       - /var/run/docker.sock:/var/run/docker.sock
