--- a/gestion-red/gestion-red-compose.yaml
+++ b/gestion-red/gestion-red-compose.yaml
@@ -1,29 +1,41 @@
-
 version: "3.8"
 
 services:
+#########
+# NGINX #
+#########
+#
+# https://192.168.1.254:443
 # https://hub.docker.com/_/nginx
+
   nginx:
     image: jc21/nginx-proxy-manager:latest
-    container_name: "nginx"
+    container_name: nginx
     restart: unless-stopped
     ports:
-      - 81:81 # Interfaz webb
-      - 80:80 # Comunicaciones http. Abrir puerto TCP en el router
-      - 443:443 # Comunicaciones https. Abrir puerto TCP en el router
+      - 81:81
+      - 80:80
+      - 443:443
     networks:
       customnetwork:
         ipv4_address: 172.22.0.2 # Asignamos IP fija para permitir configuración de proxies de Home Assistant
-    environment:
-      - TZ=Europe/Madrid
     volumes:
       - /docker/nginx/config:/data
       - /docker/nginx/letsencrypt:/etc/letsencrypt
+    environment:
+      - TZ=Europe/Madrid
     labels: # Labels para What's up Docker
       - wud.display.name=Nginx
       - wud.display.icon=mdi:arrow-decision
+      
 networks:
   customnetwork:
     ipam:
       config:
         - subnet: 172.22.0.0/16
+
+#########
+# NGINX #
+#########
+#
+# https://192.168.1.254:8200
