--- a/gestion-domo/hass-compose.yaml
+++ b/gestion-domo/hass-compose.yaml
@@ -1,12 +1,16 @@
 version: "3.8"
 
 services:
-# - Instalar SAI
+############
+# NUT-UPSD #
+############
+#
 #   https://blog.crstian.me/post/2022-08-05-integrar-sai-salicru-sps-500-one-en-home-assistant-con-docker/
 #   https://networkupstools.org/docs/man/genericups.html
+
   nut-upsd:
     image: upshift/nut-upsd
-    container_name: "nut-upsd"
+    container_name: nut-upsd
     restart: unless-stopped
     ports:
       - 3493:3493
@@ -21,6 +25,10 @@ services:
       - wud.display.name=Network UPS Tools
       - wud.display.icon=mdi:car-battery
 
+#################
+# HOMEASSISTANT #
+#################
+#
 # - Eliminar entidades sin identificador único:
 #   Ejecutar servicio "Recorder: Purge Entities"
 #   Cerrar y volver a abrir sesión
@@ -31,30 +39,21 @@ services:
 # 
 # - Notificaciones push:
 #   https://www.home-assistant.io/integrations/html5
-  homeassistant:
+
+  hass:
     depends_on: [nut-upsd]
     image: ghcr.io/home-assistant/home-assistant:stable
-    container_name: "homeassistant"
+    container_name: hass
     restart: unless-stopped
     ports: 
       - 8123:8123
     network_mode: host
-    environment:
-      - TZ=Europe/Madrid
     volumes:
       - /docker/homeassistant/config:/config
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock #Necesario para Monitor Docker
+    environment:
+      - TZ=Europe/Madrid
     labels: # Labels para What's up Docker
       - wud.display.name=Home Assistant
       - wud.display.icon=mdi:home-assistant
-    
-#  node-red:
-#    image: nodered/node-red:latest
-#    container_name: nodered
-#    ports:
-#      - 1880:1880
-#    environment:
-#      - TZ=Europe/Madrid
-#    volumes:
-#      - /docker/nodered/config:/data
