--- a/gestion-red/gestion-red-compose.yaml
+++ b/gestion-red/gestion-red-compose.yaml
@@ -28,6 +28,42 @@ services:
     labels: # Labels para What's up Docker
       - wud.display.name=Nginx
       - wud.display.icon=mdi:arrow-decision
+
+##########
+# PIHOLE #
+##########
+#
+# https://192.168.1.254:8200
+#
+# https://github.com/pi-hole/docker-pi-hole/ 
+# https://docs.pi-hole.net/
+# Listas de bloqueo https://blocklist.site/
+#
+# - ESTABLECER CONTRASEÑA: pihole -a -p contraseña
+# - REINICIAR SERVICIO DNS: pihole restartdns
+
+  pihole:
+    image: pihole/pihole:latest
+    container_name: "pihole"
+    restart: unless-stopped
+    # For DHCP it is recommended to remove these ports and instead add: network_mode: "host"
+    #ports:
+    #  - 53:53/tcp
+    #  - 53:53/udp
+    #  - 67:67/udp # Only required if you are using Pi-hole as your DHCP server
+    #  - 8080:80/tcp # Interfaz web
+    network_mode: host
+    volumes:
+      - /docker/pihole/config:/etc/pihole
+      - /docker/pihole/dnsmasq.d:/etc/dnsmasq.d
+    environment:
+      - TZ=Europe/Madrid
+      - WEB_PORT=831
+    cap_add:
+      - NET_ADMIN # Required if you are using Pi-hole as your DHCP server, else not needed
+    labels: # Labels para What's up Docker
+      - wud.display.name=Pi Hole
+      - wud.display.icon=mdi:pi-hole
       
 networks:
   customnetwork:
