--- a/utilidades/flame-compose.yaml
+++ b/utilidades/flame-compose.yaml
@@ -15,3 +15,6 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock # optional but required for Docker integration feature
     environment:
       - PASSWORD=${FLAME_PWD}
+    labels: # Labels para What's up Docker
+      - wud.display.name=Flame
+      - wud.display.icon=mdi:fire-circle
