--- a/gestion-docker/portainer-compose.yaml
+++ b/gestion-docker/portainer-compose.yaml
@@ -18,4 +18,4 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     labels:
       - wud.display.name=Portainer
-      - wud.display.icon=mdi:train-car-container
+      - wud.display.icon=si:portainer
