--- a/utilidades/vscode-compose.yaml
+++ b/utilidades/vscode-compose.yaml
@@ -14,8 +14,8 @@ services:
       - 8443:8443
     volumes:
       - /docker/vscode/config:/config
-      - /docker/homeassistant/config:/config/workspace
-      - /docker/Docker_Config:/docker/Docker_Config
+      - /docker/homeassistant/config:/HASS_Config
+      - /docker/Docker_Config:/Docker_Config
     environment:
       - TZ=Europe/Madrid
       - PUID=1000
