--- a/utilidades/vscode-compose.yaml
+++ b/utilidades/vscode-compose.yaml
@@ -16,11 +16,15 @@ services:
       - /docker/vscode/config:/config
       - /docker/homeassistant/config:/HASS_Config
       - /docker/Docker_Config:/Docker_Config
+      - $HOME/.ssh:/home/builder/.ssh:rw
+      - $SSH_AUTH_SOCK:/ssh.socket
     environment:
       - TZ=Europe/Madrid
       - PUID=1000
       - PGID=1000
-      - DEFAULT_WORKSPACE=/config/workspace #optional
+      - SSH_AUTH_SOCK=/ssh.socket
+#      - DEFAULT_WORKSPACE=/config/workspace #optional
+      - DEFAULT_WORKSPACE=/HASS_Config #optional
     labels: # Labels para What's up Docker
       - wud.display.name=Visual Code
       - wud.display.icon=mdi:file-code
