--- a/utilidades/vscode-compose.yaml
+++ b/utilidades/vscode-compose.yaml
@@ -14,16 +14,13 @@ services:
       - 8443:8443
     volumes:
       - /docker/vscode/config:/config
-      - /docker/homeassistant/config:/HASS_Config
+      - /docker/homeassistant/config:/HASS_Config #Añadir las rutas locales a todos los repos que queramos
       - /docker/Docker_Config:/Docker_Config
-      - /home/kike/.ssh:/config/.ssh
-#      - "$SSH_AUTH_SOCK:/ssh.socket"
+      - /home/kike/.ssh:/config/.ssh # Necesario para acceso write a los repos Github
     environment:
       - TZ=Europe/Madrid
       - PUID=1000
       - PGID=1000
-#      - "SSH_AUTH_SOCK=/ssh.socket"
-#      - DEFAULT_WORKSPACE=/config/workspace #optional
       - DEFAULT_WORKSPACE=/HASS_Config #optional
     labels: # Labels para What's up Docker
       - wud.display.name=Visual Code
