--- a/utilidades/vscode-compose.yaml
+++ b/utilidades/vscode-compose.yaml
@@ -16,6 +16,7 @@ services:
       - /docker/vscode/config:/config
       - /docker/homeassistant/config:/HASS_Config
       - /docker/Docker_Config:/Docker_Config
+      - /docker/Docker_Swarm_Config:/Docker_Swarm_Config
 #      - "$HOME/.ssh:/home/builder/.ssh:rw"
 #      - "$SSH_AUTH_SOCK:/ssh.socket"
     environment:
