--- a/gestion-domo/hass-compose.yaml
+++ b/gestion-domo/hass-compose.yaml
@@ -24,9 +24,6 @@ services:
     labels: # Labels para What's up Docker
       - wud.display.name=Network UPS Tools
       - wud.display.icon=mdi:car-battery
-    labels: # Labels para What's up Docker
-      - wud.display.name=Nut-UPS
-      - wud.display.icon=mdi:car-battery
 
 ###########
 # FRIGATE #
@@ -58,6 +55,10 @@ services:
           size: 1000000000
     environment:
       FRIGATE_RTSP_PASSWORD: ${FRIGATE_PWD}
+      MQTT_USR: ${MQTT_USR}
+      MQTT_PWD: ${MQTT_PWD}
+      RTSP_USR: ${RTSP_USR}
+      RTSP_PWD: ${RTSP_PWD}
     labels: # Labels para What's up Docker
       - wud.display.name=Frigate
       - wud.display.icon=mdi:cctv
