--- a/gestion-domo/hass-compose.yaml
+++ b/gestion-domo/hass-compose.yaml
@@ -53,8 +53,7 @@ services:
         target: /tmp/cache
         tmpfs:
           size: 1000000000
-    environment:
-#      FRIGATE_RTSP_PASSWORD: ${FRIGATE_PWD}
+    environment: # No cambiar los nombres de las variables, Frigate espera estas y no otras...
       FRIGATE_MQTT_USER: ${MQTT_USR}
       FRIGATE_MQTT_PASSWORD: ${MQTT_PWD}
       FRIGATE_RTSP_USER: ${RTSP_USR}
