--- a/gestion-docker/portainer-compose.yaml
+++ b/gestion-docker/portainer-compose.yaml
@@ -1,4 +1,4 @@
-# Descargar raw con: https://raw.githubusercontent.com/EnriqueBesuman/Docker_Config/main/gestion-docker/portainer-compose.yaml
+# Descargar raw con: wget https://raw.githubusercontent.com/EnriqueBesuman/Docker_Config/main/gestion-docker/portainer-compose.yaml
 # Ejecutar con: docker-compose -p "portainer" -f portainer-compose.yaml up -d
 #
 # https://192.168.1.254:9443
