--- a/gestion-docker/portainer-compose.yaml
+++ b/gestion-docker/portainer-compose.yaml
@@ -1,5 +1,5 @@
 # Descargar raw con: wget -q https://raw.githubusercontent.com/EnriqueBesuman/Docker_Config/main/gestion-docker/portainer-compose.yaml -O portainer-compose.yaml
-# Ejecutar con: docker-compose -p "portainer" -f portainer-compose.yaml up -d
+# Ejecutar con: docker-compose -f portainer-compose.yaml pull && docker-compose -p "portainer" -f portainer-compose.yaml up -d
 #
 # https://192.168.1.254:9443 
 #
