--- a/utilidades/kuma-composer.yaml
+++ b/utilidades/kuma-composer.yaml
@@ -18,8 +18,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock # Para monitorizar contenedores
     environment:
       - TZ=${TZ}
-      - PUID=${PUID}
-      - PGID=${PGID}
+#      - PUID=${PUID}
+#      - PGID=${PGID}
     labels:
       - wud.display.name=Uptime Kuma
       - wud.display.icon=si:kuma
